# alkoteka-scraper-test

./: .gitignore  README.MD  pyproject.toml  requirements.txt
core/: middlewares.py  settings.py
core/logging/: set_up_logger.py
core/spiders/: alkoteka.py
